# SimpleECSGame

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
resource/shaders/: test.frag  test.vert
resource/textures/: spritesheet.json
src/: App.cpp  App.h  Factories.cpp  Factories.h  main.cpp
src/Collision/: constraints.cpp  constraints.h
src/Components/: Component.h  gameComponents.h
src/Events/: Event.h
src/Renderer/: Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  ShaderVariables.h  SpriteShader.cpp  SpriteShader.h  TextureManager.cpp  TextureManager.h  Vertex.h  VertexArray.h  Window.cpp  Window.h
src/Scene/: Camera.cpp  Camera.h  SpirteCreation.cpp  SpriteCreation.h
src/Systems/: ApplyForces.cpp  ApplyForces.h  SpriteExampleSystem.cpp  SpriteExampleSystem.h  physicsSystem.cpp  physicsSystem.h  renderSystem.h
src/Tests/: TestComponents.h  serialize_in_component.h  test_serialization.cpp  test_types.h
src/Utils/: ImageContainer.cpp  ImageContainer.h  collision.cpp  collision.h  math.h  polyChain.cpp  polyChain.h  serialization.cpp  serialization.h  stringHelper.h
src/ecs/: Component.h  ECS.cpp  Entity.h  System.h  ecs.h  ecsTypes.h
